--- a/gb/23/9/4/n14066536.md
+++ b/gb/23/9/4/n14066536.md
@@ -22,11 +22,6 @@
 <h3>了解更多<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>即时要闻及生活资讯，请点击 <ahref="http://dajiyuan.com.au">dajiyuan.com.au</a></h3>
 <p>（本文未经许可不得转载或建立镜像网站）</p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/20/n10498689.md#1">顾客利用自助结账偷窃 两大超市年损失10亿元</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/24/n14002959.md#1">Woolworths一款冰激凌含金属异物 全澳召回</a></li>
@@ -36,39 +31,33 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060750.md#1">Woolworths自助结账试用摄像技术打击购物盗窃</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061795.md#1">每家超市近70个摄像头 专家担忧顾客隐私安全</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065098.md#1">Woolworths推出会员价 区别定价惹争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066534.md#1">麦当劳大富翁游戏回归 9月6日登场 ?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066537.md#1">澳洲净增25万留学生 导致周租涨20澳元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106421.md#1">悉尼教授研发出智能技术 公路拥堵可改善40%</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106404.md#1">脸书与Instagram企业付费验证开启</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559430.md#1" target="_blank">林辉： 中共70年来的成功与未遂政变</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/12/9/15/n3683727.md#1" target="_blank">历史回顾：公安部给李洪志先生的感谢信</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064023.md#1">古埃及《托特预言》：创世主末后救世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065399.md#1">【未解之谜】命中注定爱上你？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066063.md#1">【菁英论坛】吏治匪式化 中国社会失控中</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066122.md#1">【时事军事】军援挺俄 中朝可能被美祭刀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065310.md#1">【中国禁闻】新版地图惹众怒 中共拉拢邻国企图落空</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066034.md#1">网信办发文后 超千万粉丝网红“秀才”遭封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065820.md#1">人民币大贬 央行维稳 专家：工具会钝化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066022.md#1">三个因素解释为何美国经济超预期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064909.md#1">大马监制李建兴证实《好声音》导师转身价码</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064934.md#1">任威尼斯影展评审 舒淇惊艳亮相开幕式红毯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064864.md#1">宋祖儿遭实名举报逃税？名下多家公司已注销</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065521.md#1">逃税传闻发酵 宋祖儿遭5大卫视官微删除内容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065575.md#1">“香港才子”蔡澜近况曝光 坐轮椅现身大马</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063325.md#1">不可错过的热带水果——奇异、营养又美味的菠萝蜜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065173.md#1">什么是“弃程”？ 为何这招能省机票费用？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056270.md#1">防便秘这样做都错了！医师破解5迷思 加1物就通便</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062927.md#1">番薯及蕃薯叶护眼降血糖 一个禁忌要知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059859.md#1">失眠易致失智肥胖 中医5方法改善 独创颈椎疗法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103809.md#1">【未解之谜】朵洛莉丝催眠故事（4）人类至关重要的10年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105079.md#1">【环球直击】中共政治局开会讨论出阴招 只字不提李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105080.md#1">【中国禁闻】李克强悼念活动扩大 民借机表达积怨</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105977.md#1">【全球新闻】李克强去世 中共团派终结</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105065.md#1">跳级考上泰国医学院 “盖儿”迎18岁成年礼</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104554.md#1">首位黑人动作演员理察朗崔罹癌病逝 享寿81岁</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104502.md#1">好莱坞停摆 道具业者2千坪仓库仅老板留守</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104934.md#1">李善均为涉毒嫌疑四度鞠躬致歉 向家人道歉</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077833.md#1">你的病痛 可能都是脊椎造成的</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104643.md#1">【车评】5.6升引擎会否是绝响！？2023 Infiniti QX80 Sensory 4WD</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/4/n14066536.htm">自助结账体验不悦 新州老妇不再光顾Woollies</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/4/n14066536.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
